[package]
name = "python_rust_cache"
version = "0.1.0"
edition = "2024"

[lib]
# The name of the native library.
# This is the name which will be used in Python to import the library (i.e. `import string_sum`).
# If you change this, you must also change the name of the `#[pymodule]` in `src/lib.rs`.
name = "python_rust_cache"
#
# "cdylib" is necessary to produce a shared library for Python to import from.
#
# Downstream Rust code (including code in `bin/`, `examples/`, and `tests/`) will not be able
# to `use string_sum;` unless the "rlib" or "lib" crate type is also included, e.g.:
# crate-type = ["cdylib", "rlib"]
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "~0.25.1", features = ["extension-module"] }
pyo3-async-runtimes = { version = "~0.25.0", features = ["tokio-runtime"] }
lazy_static = "~1.5.0"
serde_cbor = "~0.11.2"
zstd = "~0.13.0"
moka = { version = "~0.12", features = ["future", "sync"] }
tokio = { version = "~1", features = ["rt-multi-thread", "macros", "time"] }

[package.metadata.pyo3]
extension-module = true
