[project]
name = "python-rust-cache"
version = "0.1.0"
description = "In-memory cache for python, written in rust."
readme = "README.md"
requires-python = ">=3.13"

[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

dependencies = [
    "maturin",
    "semantic-version",
    "setuptools-rust",
]
