[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "python-rust-cache"
version = "0.1.0"
description = "In-memory cache for python, written in rust."
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "fastapi>=0.116.1",
    "maturin",
    "pytest>=8.4.1",
    "semantic-version",
    "setuptools-rust",
    "uvicorn[standard]>=0.35.0",
]
